<package>
  <name>heartbeats</name>
  <description>Runs and manages tasks/state machines</description>
  <version>0.1.1</version>
  <maintainer email="mshah@willowgarage.com">Mirza Shah</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/heartbeats</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rostopic</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>

</package>


