<package>
  <name>heartbeats</name>
  <description>An easy way for creating heartbeats across multiple nodes in a ROS graph</description>
  <version>0.1.0</version>
  <maintainer email="mshah@willowgarage.com">Mirza Shah</maintainer>
  <author email="mshah@willowgarage.com">Mirza Shah</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/heartbeats</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


